# mpvc

./: Cargo.toml  README.md
etc/: mpvc.bash  mpvc.elv  mpvc.fish  mpvc.ps1  mpvc.zsh
examples/: mpvc-fzf  mpvc-polybar.rs  polybar.rs
src/: commands.rs  ipc.rs  lib.rs  macros.rs  main.rs
