[package]
name = "mpvc"
version = "1.4.7"
authors = ["neeshy <neeshy@tfwno.gf>", "Jonas Frei <freijon@pm.me>"]
description = "An mpc-like CLI tool for mpv"
homepage = "https://github.com/neeshy/mpvc"
repository = "https://github.com/neeshy/mpvc.git"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = "4.5.31"
clap_complete = "4.5.46"
colored = "3.0.0"
log = "0.4.26"
serde = "1.0.218"
serde_json = "1.0.139"

[dev-dependencies]
env_logger = "0.11.6"
notify = "8.0.0"
