[package]
name = "mpvc"
version = "1.4.7"
authors = ["neeshy <neeshy@tfwno.gf>", "Jonas Frei <freijon@pm.me>"]
description = "An mpc-like CLI tool for mpv"
homepage = "https://github.com/neeshy/mpvc"
repository = "https://github.com/neeshy/mpvc.git"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = "4.5.37"
clap_complete = "4.5.48"
colored = "3.0.0"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
env_logger = "0.11.8"
notify = "8.0.0"
